  TRUE: Permission is true in non claimed areas
  FALSE: Permission is false in non claimed areas
  Old configs will get auto converted: false -> ALLFALSE and true -> ALLTRUE
  Basically now a worldguard version
- Add locking items when the player dies so other players cant pick it up.
  Use /flan unlockItems to allow it.

Flan 1.4.0
======================
- Port to 1.17
- Add FLIGHT permission. Prevents non creative flight in claims
- Add CANSTAY permission. Makes players unable to enter your claim
- Remove the mobspawn config.
- Add support for wildcard worlds in globalDefaultPerms. Use "*" instead of <dimension key>
  MOBSPAWN added to globalDefaultPerms with value false
  FLIGHT added to globalDefaultPerms with value true
- Add /flan trapped command. Using it teleports you out of a claim you don't own after 5 seconds
+==Flan 1.3.3 ======================
- Some blocks permission changed from PROJECTILES to OPENCONTAINER on direct interaction
    Affected blocks: campfire, tnt, (chorus fruit), bells
    Direct interaction as in right clicking the block. For actual projectile hits this remains unchanged
- Fix several entities not protected on indirect non projectile player attacks (e.g. through player ignited tnt)-
    More noticable with other mods #52
- Add gunpowder currency support.
    Enables the purchase and selling of claim blocks. Price configurable. Disabled by default
    Only selling and purchase of additional claim blocks possible (not the ones you get with time).
+==Flan 1.3.2 ======================
- Change gui item text to non italic (there are some very picky people)
- Add enderman grief permission
- Add snowman snowlayers permission
- Truly fix personal groups saving issues ._. (pls...)

Flan 1.3.1
======================
- Fix the nullpointer when creating claims. derp
- Fix personal groups not reading from file. derp x2
- Fix items in gui not updated clientside on shift click

Flan 1.3.0
======================